# CHESS-ENGINE

./: CMakeLists.txt  ChessEngine.py  ChessMain.cpp  ChessMain.py  README.md
cmake_modules/: FindSDL2.cmake
